--- a/index.html
+++ b/index.html
@@ -43,28 +43,13 @@
 										</header>
 										<p>We are a small not for profit organisation with a big dream. We want to provide a platform that will enable users to find a wide variety of charity works, conservation efforts, community projects or other crowd funded projects from all across Australia.</p>
 										<p>Donating to charity shouldn't be difficult or time consuming, and thats why we made Choice Charities.</p>
+										<p>Ready to make a difference?</p>
+										<li><a href="/The_IT_World/Donation.html" class="button big">Donate now!</a></li>
 									</div>
 									<span class="image object">
 										<img src="images/Home1.png" alt="" />
 									</span>
 								</section>
-							
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ready to Donate?</h2>
-									</header>
-									<div class="features">
-										<article>
-											<div class="content">
-
-											<li><a href="/The_IT_World/Donation.html" class="button big">Donate now! style="width:500px;height:250px;"</a></li>
-											</ul>
-											</div>
-										</article>
-									</div>
-								</section>
-							
 
 							<!-- Section -->
 								<section>
