--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 										</header>
 										<p>We are a small not for profit organisation with a big dream. We want to provide a platform that will enable users to find a wide variety of charity works, conservation efforts, community projects or other crowd funded projects from all across Australia.</p>
 										<p>Donating to charity shouldn't be difficult or time consuming, and thats why we made Choice Charities.</p>
-										<h2>Ready to make a difference?</h2>
-										<li><a href="/The_IT_World/Donation.html" class="button big">Donate now!</a></li>
+										<h3>Ready to make a difference?</h3>
+										<a href="/The_IT_World/Donation.html" class="button big">Donate now!</a>
 									</div>
 									<span class="image object">
 										<img src="images/Home1.png" alt="" />
