--- a/AboutUs.html
+++ b/AboutUs.html
@@ -31,21 +31,25 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<H1 style="color:#0399D6;">Generic</H1>
+										<H1 style="color:#0399D6;">About Us</H1>
 									</header>
 
-									<span class="image main"><img src="images/Home2.jpg" alt="" /></span>
+									<span class="image main"><img src="images/Home2.png" alt="" /></span>
 									
 									<h2>Our Story</h2>
-									<p>Started by a small group of young and innovative students, our business has gone from being a small idea about the possibilities and potential accomplishments that could be achieved through the amazing medium that is the internet. 
+									<p>	
+										Started by a small group of young and innovative students, our business has gone from being a small idea about the possibilities and potential accomplishments that could be achieved through the amazing medium that is the internet. 
 										To a fully fledged non-for-profit business with a number of active charities being supported by our amazing donators.
 										This idea was fed by our shared appreciation of our lifestyles, our opportunities for our education and seeing just how different our lives are from a large number of people spread out across our very own home country.
 									</p>
 
 									<hr class="major" />
 
-									<h2></h2>
-									<p></p>
+									<h2>What we created</h2>
+									<p>	
+										Choice Charities is a online non-for-profit that hosts a platform that users can use to easily browse a variety of different charities which support all kinds of different community works and public services such as wildlife conservation, 
+										helping the homeless, environmental conservation works, feeding hungry children and much more. With all of our charities ran from within Australia.
+									</p>
 									
 									<hr class="major" />
 
