--- a/AboutUs.html
+++ b/AboutUs.html
@@ -80,7 +80,7 @@
 										</p>
 									</div>
 									<span class="image object">
-										<img src="images/Logo-Extra.jpg" alt="" />
+										<img src="images/Logo.jpg" alt="" />
 									</span>
 								</section>
 
