--- a/AboutUs.html
+++ b/AboutUs.html
@@ -80,7 +80,7 @@
 										</p>
 									</div>
 									<span class="image object">
-										<img src="images/Logo.JPG" alt="" />
+										<img src="images/Logo.JPG" alt="" style="width:200px;height:200px;" />
 									</span>
 								</section>
 
