--- a/AboutUs.html
+++ b/AboutUs.html
@@ -59,7 +59,7 @@
 									<hr class="major" />
 
 									<h2>What we created</h2>
-									<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Choice Charities is a online non-for-profit that hosts a platform that users can use to easily browse a variety of different charities which support all kinds of different community works and public services such as wildlife conservation, helping the homeless, environmental conservation works, feeding hungry children and much more. With all of our charities ran from within Australia.</p>
+									<p><span class="image right"><img src="images/Logo-Extra.jpg" alt="" /></span>Choice Charities is a online non-for-profit that hosts a platform that users can use to easily browse a variety of different charities which support all kinds of different community works and public services such as wildlife conservation, helping the homeless, environmental conservation works, feeding hungry children and much more. With all of our charities ran from within Australia.</p>
 									
 									<hr class="major" />
 
