--- a/AboutUs.html
+++ b/AboutUs.html
@@ -53,7 +53,7 @@
 									<hr class="major" />
 
 									<h2>How have we helped?</h2>
-									<p><p><span class="image left"><img src="images/ThankYou.jpg" alt="" /></span>Over the past few months since the launch of our site, our amazing donators have managed to work together and have donated a collaborative effort of over $10,000 to a variety of charities. This is an incredible achievement, and we are completely humbled to see the level of generosity that the Australian public are capable of! After this initial success we are even more motivated to make this platform blossom into an even wider reaching community, this is why we are now using the percentage of donations that you have donated to us to invest in greater advertising on a wider range of platforms. </p></p>
+									<p><p><span class="image left"><img src="images/ThankYou.jpg" alt="" /></span>Over the past few months since the launch of our site, our amazing donators have managed to work together and have donated a collaborative effort of over $10,000 to a variety of charities. This is an incredible achievement, and we are completely humbled to see the level of generosity that the Australian public are capable of! After this initial success we are even more motivated to make this platform blossom into an even wider reaching community, this is why we are now using the percentage of donations that you have donated to us to invest in greater advertising on a wider range of platforms. </p><h2>We Cannot thank you enough!</h2></p>
 									
 								</section>
 
