--- a/Donation.html
+++ b/Donation.html
@@ -31,8 +31,9 @@
 
 							<!-- Content -->
 							<head>
-								<title>map created with amCharts | amCharts</title>
+
 								<meta name="description" content="map created using amCharts pixel map generator" />
+							<h1> On the Map Below Click on a heart to Select a charity</h1>
 
 								<!--
 									This map was created using Pixel Map Generator by amCharts and is licensed under the Creative Commons Attribution 4.0 International License.
