--- a/Payment.html
+++ b/Payment.html
@@ -56,7 +56,7 @@
   <h3>Payment Information</h3>
   <input type="radio" id="creditCard" name="paymentType" value="creditCard">
   <label for="creditcard"> </label>
-  <img width="30" height="30" src="/img/visaLogo.jpg" alt=""><img width="30" height="30" src="/img/mLogo.png" alt="">
+  <img width="30" height="30" src="images/visaLogo.jpg" alt=""><img width="30" height="30" src="images/mLogo.png" alt="">
   <br>
   <label for="nameOnCard">Name On Card</label>
   <input type="text" id="nameOnCard" name="nameOnCard" value="">
@@ -71,15 +71,17 @@
 <br>
   <input type="radio" id="applePay" name="paymentType" value="applePay">
   <label for="applePay"></label>
-  <img width="30" height="30" src="/img/apple-pay-logo.png" alt="">
+  <img width="30" height="30" src="images/apple-pay-logo.png" alt="">
   <br>
   <input type="radio" id="payPal" name="paymentType" value="payPal">
   <label for="payPal"></label>
-  <img width="30" height="30" src="/img/payPalLogo.png" alt="">
+  <img width="30" height="30" src="images/payPalLogo.png" alt="">
   <br>
   <input type="radio" id="googlePay" name="paymentType" value="googlePay">
   <label for="googlePay"></label>
-  <img width="50" height="30"src="/img/gPayLogo.jpg" alt="">
+  <img width="50" height="30"src="images/gPayLogo.jpg" alt="">
+	 <br>
+  <input type="button" value="Donate Now" onclick="msg()">
 								</section>
 
 						</div>
