--- a/Payment.html
+++ b/Payment.html
@@ -81,7 +81,8 @@
   <label for="googlePay"></label>
   <img width="50" height="30"src="images/gPayLogo.jpg" alt="">
 	 <br><br>
-  <input type="button" value="Donate Now" onclick="msg()">
+ <form action="https://team-indecisive.github.io/The_IT_World/UnderConstruction.html">
+    <input type="submit" value="Donate Now" />
 								</section>
 
 						</div>
