--- a/Payment.html
+++ b/Payment.html
@@ -31,12 +31,11 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<H1 style="color:#0399D6;">Payment</H1>
+										<H1 style="color:#0399D6;">Make Your Donation</H1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
-									<h1>Payment</h1>
+									
     <h3>Payment amount</h3>
     <p>Your payment will be for $0.00 to.....</p>
     <h3>Payee Details</h3>
@@ -83,6 +82,11 @@
 	 <br><br>
  <form action="https://team-indecisive.github.io/The_IT_World/UnderConstruction.html">
     <input type="submit" value="Donate Now" />
+	 <br><br>
+	 
+	 
+	 
+									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 								</section>
 
 						</div>
