--- a/Payment.html
+++ b/Payment.html
@@ -34,7 +34,8 @@
 										<H1 style="color:#0399D6;">Make Your Donation</H1>
 									</header>
 
-
+<div class="row gtr-uniform">
+<div class="col-6 col-12-xsmall">
 									
     <h3>Payment amount</h3>
     <p>Your payment will be for $0.00 to.....</p>
@@ -51,7 +52,9 @@
   <br>
   <label for="email">Email:<span class="required">*</span></label><br>
   <input type="text" id="email" name="email" size="50" required>
-
+</div>
+	
+<div class="col-6 col-12-xsmall">	
   <h3>Payment Information</h3>
   <input type="radio" id="creditCard" name="paymentType" value="creditCard">
   <label for="creditcard"> </label>
@@ -83,7 +86,8 @@
  <form action="https://team-indecisive.github.io/The_IT_World/UnderConstruction.html">
     <input type="submit" value="Donate Now" />
 	 <br><br>
-	 
+	 </div>
+	</div>
 	 
 	 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
