--- a/Payment.html
+++ b/Payment.html
@@ -38,7 +38,7 @@
 <div class="col-6 col-12-xsmall">
 									
     <h3>Payment amount</h3>
-    <p>Your payment will be for the amount of $0.00 to your chosen charity and $0.00 to help Choice Charities continue its work</p>
+    <p>Your payment will be for the amount of $0.00 to your chosen charity and $0.00 to help Choice Charities continue its important work.</p>
     <h3>Payee Details</h3>
 <form action="/action_page.php">
 <input type="radio" id="name" name="donarId" value="name">
@@ -91,7 +91,7 @@
 	</div>
 	 
 	 
-									<span class="image main"><img src="images/thankYou.jpg" alt="" /></span>
+									<span class="image main"><img src="images/thankyou.jpg" alt="" /></span>
 								</section>
 
 						</div>
